# Resizer

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: __main__.py  app.py  dto.py  settings.py  utils.py
